lib/search_syntax/search.treetop
grammar Search
  rule root
    space* expressions space* {
      def value
        elements[1].value
      end
    }
  end

  rule expressions
    ((quoted_value / param / bare_value) space?)* {
      def value
        elements.map{|e| e.elements[0].value.merge({ 
          raw: e.elements[0].text_value,
          start: e.elements[0].interval.begin,
          finish: e.elements[0].interval.end
        }) }
      end
    }
  end

  rule space
    [ \t]+
  end

  rule quoted_value
    ('"' ('\"' / !'"' .)* '"' / '\'' ('\\\'' / !'\'' .)* '\'') {
      def value
        quote = elements[0].text_value
        {
          type: :quoted,
          value: elements[1].text_value.gsub("\\#{quote}", quote)
        }
      end
    }
  end

  rule bare_value
    (!space .)+ '' {
      def value
        {
          type: :bare,
          value: elements[0].text_value
        }
      end
    }
  end

  rule predicate
    ">=" / "<=" / "=>" / "=<" / "!=" / ">" / "<"
  end

  rule param
    (!(space / ":") .)+ ":" predicate? (quoted_value / bare_value) {
      def value
        result = {
          type: :param,
          name: elements[0].text_value,
          value: elements[3].value[:value]
        }
        predicate = elements[2].text_value
        if predicate != ""
          result[:predicate] = predicate.to_sym
        end
        result
      end
    }
  end

end
